# bank_AI_tribetech

./: .gitignore  CLAUDE.md  GUIDE.md  README.md
.github/workflows/: deploy.yml
bank_AI_tribetech/: docker-compose.yml  pyproject.toml  start_dev.sh  train_models.sh
bank_AI_tribetech/django_web/: Dockerfile  requirements.txt
bank_AI_tribetech/django_web/apps/chatbot/: apps.py  urls.py  views.py
bank_AI_tribetech/django_web/apps/dashboard/: urls.py  views.py
bank_AI_tribetech/django_web/apps/home/: urls.py  views.py
bank_AI_tribetech/django_web/apps/reports/: urls.py  views.py
bank_AI_tribetech/django_web/apps/scoring/: urls.py  views.py
bank_AI_tribetech/django_web/config/: settings.py  urls.py
bank_AI_tribetech/django_web/templates/: base.html
bank_AI_tribetech/django_web/templates/chatbot/: index.html
bank_AI_tribetech/django_web/templates/dashboard/: index.html
bank_AI_tribetech/django_web/templates/home/: guide.html  index.html
bank_AI_tribetech/django_web/templates/reports/: eba.html  monitoring.html
bank_AI_tribetech/django_web/templates/scoring/: batch.html  ead.html  lgd.html  pd.html
bank_AI_tribetech/fastapi_ml/: Dockerfile  main.py  requirements.txt
bank_AI_tribetech/fastapi_ml/training/: feature_engineering.py  ingest_postgres.py  train_pipeline.py
bank_AI_tribetech/notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_pd_model.ipynb
bank_AI_tribetech/sql/init/: 01_schema.sql
bank_AI_tribetech/sql/queries/: model_monitoring.sql  portfolio_analysis.sql
