[project]
name = "credit-risk-irb"
version = "1.0.0"
description = "Credit Risk IRB Platform — PD, LGD, EAD Models | TribeTech"
requires-python = ">=3.12"
authors = [
    {name = "Alex Mendes", email = "alexmendesarnold89@yahoo.com"}
]

dependencies = [
    # Web frameworks
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "whitenoise>=6.7",
    "gunicorn>=22.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # Base de dados
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "duckdb>=1.1",

    # Data Science / ML
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "imbalanced-learn>=0.12",

    # MLflow
    "mlflow>=2.15",

    # Visualização
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "kaleido>=0.2",

    # PDF / Relatórios
    "reportlab>=4.2",
    "weasyprint>=62.0",
    "jinja2>=3.1",

    # Utilitários
    "python-multipart>=0.0.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "pyarrow>=17.0",
    "tqdm>=4.66",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "black>=24.8",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "black>=24.8",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
